# sjd.im

./: .gitignore  Dockerfile  README.md  docker-compose.yml
ansible/: Makefile  README.md  ansible.cfg  production  std-users-playbook.yml
ansible/roles/sjd.im/files/: default  requirements.txt  sjdim.service
ansible/roles/sjd.im/tasks/: main.yml  packages.yml  pip.yml  users.yml  website.yml
ansible/roles/sjd.im/vars/: main.yml
deploy/ansible/: Makefile  README.md  production  site.yml
deploy/ansible/roles/sjd.im/tasks/: packages.yml  pip.yml  service.yml  website.yml
scripts-dev/: dev_environ.sh
src/: Pipfile  README.md  pyproject.toml  requirements.txt
src/site/: app.py
src/site/static/: font.css  mobile.css  styles.css
src/site/templates/: about.html  base.html  blog.html  contact.html  index.html  notes.html  post.html  projects.html  resume.html
