[tool.poetry]
name = "sjd.im"
version = "0.1.0"
description = ""
authors = ["sjd0 <sdixon@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
easy-publish = "^0.0.9"
mistune = "^0.8.4"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
jedi = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
